# gala-stacker

./: CLAUDE.md  Makefile  README.md  meson.build  meson_options.txt
data/: org.pantheon.desktop.gala.plugins.paperwm.gschema.xml  org.pantheon.desktop.gala.plugins.stacker.gschema.xml  org.pantheon.desktop.gala.plugins.xy.gschema.xml
hooks/: pre-push
src/: FocusRing.vala  Geometry.vala  Main.vala  Row.vala
switchboard-plug/: Plug.vala  SettingsView.vala
tests/: geometry-test.vala
